# Accounts

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EnrichCsv.slnx  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-dotnet.yml  ci.yml
enrich_csv/: api.py  cache.py  cli.py  config.py  defaults.py  enricher.py  models.py  naf.py  normalizer.py  output.py  parsers.py
src/EnrichCsv/: EnrichCsv.csproj  Program.cs
src/EnrichCsv/Api/: ISireneClient.cs  SireneClient.cs  SireneResult.cs
src/EnrichCsv/Config/: CacheStore.cs  DestinationCache.cs  DestinationEntry.cs
src/EnrichCsv/Enricher/: IUserPrompt.cs  SpectreUserPrompt.cs  TransactionEnricher.cs
src/EnrichCsv/Models/: Transaction.cs  TransactionType.cs
src/EnrichCsv/Naf/: NafMapper.cs
src/EnrichCsv/Normalizer/: LabelNormalizer.cs
src/EnrichCsv/Output/: FireflyCsvWriter.cs
src/EnrichCsv/Parsers/: CmbParser.cs  FortuneoParser.cs  IBankParser.cs
tests/: test_api.py  test_cache.py  test_config.py  test_enricher.py  test_models.py  test_naf.py  test_normalizer.py  test_output.py  test_parsers.py
tests/EnrichCsv.Tests/: EnrichCsv.Tests.csproj
tests/EnrichCsv.Tests/Api/: SireneClientTests.cs
tests/EnrichCsv.Tests/Config/: CacheStoreTests.cs
tests/EnrichCsv.Tests/E2E/: E2EParserTests.cs
tests/EnrichCsv.Tests/Enricher/: TransactionEnricherTests.cs
tests/EnrichCsv.Tests/Fixtures/: cmb_commun_sample.csv  fortuneo_sample.csv
tests/EnrichCsv.Tests/Models/: TransactionTests.cs
tests/EnrichCsv.Tests/Naf/: NafMapperTests.cs
tests/EnrichCsv.Tests/Normalizer/: LabelNormalizerTests.cs
tests/EnrichCsv.Tests/Output/: FireflyCsvWriterTests.cs
tests/EnrichCsv.Tests/Parsers/: ParserTests.cs
tests/e2e/: test_e2e.py
tests/fixtures/: cmb_perso_sample.csv
