[project]
name = "enrich-csv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
enrich-csv = "enrich_csv.cli:main"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real CSV secrets",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
