[project]
name = "enrich-csv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
enrich-csv = "enrich_csv.cli:main"

[dependency-groups]
dev = [
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real CSV secrets",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
