[project]
name = "enrich-csv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
enrich-csv = "enrich_csv.cli:main"

[dependency-groups]
dev = [
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real CSV secrets",
]
testpaths = ["tests"]
addopts = "--tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["enrich_csv"]
omit = ["enrich_csv/cli.py"]  # click entry-point; covered by e2e only

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

# ---------------------------------------------------------------------------
# ruff — linter + formatter (replaces black, isort, flake8, pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["enrich_csv"]

[tool.ruff.format]
# ruff format is the modern drop-in replacement for black
quote-style = "double"
indent-style = "space"
docstring-code-format = true
